# shimexpy

./: .coveragerc  .gitignore  LICENSE  PLAN.md  pyproject.toml  readme.md  test_install.py
.github/workflows/: ci.yml
backup_before_refactor/: requirements.txt
backup_before_refactor/shimexpy.egg-info/: PKG-INFO
backup_before_refactor/shimexpy/shimexpy.egg-info/: SOURCES.txt  requires.txt
examples/: FlatFiledCorrection_analysis.ipynb  README.md  basic_analysis.py  batch_processing.py  running.py  testing_new_theory.ipynb  workflow_example.ipynb
examples/examples_gpu/: basic.py  benchmark.py  profiling.py
results/: reference_block_grid.json  test_reference_horizontal_phasemap_contrast.tif  test_sample_horizontal_phasemap_contrast.tif
shimexpy/: pyproject.toml
shimexpy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
shimexpy/core/: spatial_harmonics.py
shimexpy/gui/: app.py  image_widget.py  shimexpy_gui.py
shimexpy/io/: file_io.py
shimexpy/shimexpy/: __init__.py
shimexpy/shimexpy/core/: contrast.py  spatial_harmonic_gpu.py  spatial_harmonics.py  unwrapping.py
shimexpy/shimexpy/io/: file_io.py
shimexpy/shimexpy/preprocessing/: angles.py
shimexpy/shimexpy/utils/: crop.py  ffc.py  parallelization.py
shimexpy_cli/: pyproject.toml
shimexpy_cli/docs/: README.md
shimexpy_cli/shimexpy_cli/: cli.py  corrections.py  execute.py  processor.py
shimexpy_cli/tmp/: harmonics.pkl
shimexpy_gpu/: paper.bib  paper.md  pyproject.toml
shimexpy_gpu/shimexpy_gpu/: __init__.py
shimexpy_gpu/shimexpy_gpu/core/: api.py  bands.py  contrast.py  fft.py  reduce.py  stack.py
shimexpy_gui/: pyproject.toml
shimexpy_sim/: shimexpy_sim.py
shimexpy_tools/: morphos.py
shimexpy_tools/post_shi/: __init__.py  config.py  morphostructural.py
shimexpy_tools/post_shi/custom_widgets/: double_slider.py  image_container.py  legend_label.py  scatter_compare_qt.py  scatter_compare_simple.py
shimexpy_tools/post_shi/logic/: annotation_manager.py  sync_controller.py
shimexpy_tools/post_shi/utils/: cleaner.py  config.py  image_loader.py
src/shimexpy/cli/: cli.py  directories.py  processor.py
src/shimexpy/gui/: app.py  mainwindow.py
src/shimexpy/preprocessing/: __init__.py  corrections.py
src/shimexpy/tools/: morphos.py
src/shimexpy/tools/post_shi/custom_widgets/: resizable_rect_item.py  scatter_compare.py  scatter_window.py  zoomable_graphics.py
src/shimexpy/tools/post_shi/data/: annotation_data.py
src/shimexpy/tools/post_shi/logic/: annotation_item.py  internal_point.py  test_annotation.py
src/shimexpy/utils/: parallelization.py
tests/: conftest.py  test_contrast.py  test_integration_baseline.py  test_io.py  test_preprocessing.py  test_spatial_harmonics.py  test_unwrapping.py  test_utils.py  test_visualization.py
