[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shimexpy"
version = "0.1.0"
description = "A Python package for spatial harmonics X-ray imaging."
readme = "readme.md"
authors = [
    {name = "Jorge Luis Beltran Diaz"}
]
license = {text = "Apache License 2.0"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
    "numpy",
    "xarray",
    "dask",
    "cupy-cuda12x",
    "matplotlib",
    "scikit-image",
    "tifffile",
    "scipy",
    "pyside6",
    "pyqt"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "setuptools",
    "build",
    "twine",
]

gui = [
    "PySide6"
]

[tool.setuptools]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
shimexpy = ["*.json", "*.yaml", "*.png", "*.tif"]

[tool.setuptools.exclude-package-data]
"*" = ["__pycache__/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
shimexpy = "shimexpy.gui.app:run_gui"
